--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.bootstrap-1.0.8.jar=..\\..\\..\\..\\Desktop\\libs\\bootstrap-1.0.8.jar
+file.reference.primefaces-6.0.jar=..\\..\\..\\..\\Desktop\\libs\\primefaces-6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +47,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.Bootstrap.classpath}:\
-    ${libs.primefaces_6.0.classpath}
+    ${libs.primefaces_6.0.classpath}:\
+    ${file.reference.bootstrap-1.0.8.jar}:\
+    ${file.reference.primefaces-6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -74,7 +78,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
